tests/sksl/errors/InvalidMainReturn.metal
### Compilation failed:

error: 1: 'main' must return 'void'
int main() {
^^^^^^^^^^
1 error
